--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,6 +8,21 @@
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
+ <div class="field">
+    <%= f.label :fname %><br />
+    <%= f.text_field :fname, autofocus: true %>
+  </div>
+
+ <div class="field">
+    <%= f.label :lname %><br />
+    <%= f.text_field :lname, autofocus: true %>
+  </div>
+
+  <div class="field">
+    <%= f.label :image %><br />
+    <%= f.text_field :image, autofocus: true %>
+  </div>
+
   <div class="field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
