--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,6 +2,18 @@
 
 <h1>Posts</h1>
 
+
+<button>
+  <%= link_to 'Logout', destroy_user_session_path %>
+</button>
+
+<button>
+  <%= link_to 'Login', new_user_session_path %>
+</button>
+<button>
+  <%= link_to 'Sign Up', new_user_registration_path %>
+</button>
+
 <div id="posts">
   <% @posts.each do |post| %>
     <%= render post %>
