--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,18 +1,20 @@
 <p style="color: green"><%= notice %></p>
 
+<div class='header'>
+  <button>
+    <%= link_to 'Logout', destroy_user_session_path %>
+  </button>
+  
+  <button>
+    <%= link_to 'Login', new_user_session_path %>
+  </button>
+  
+  <button>
+    <%= link_to 'Sign Up', new_user_registration_path %>
+  </button>
+</div>
+
 <h1>Posts</h1>
-
-
-<button>
-  <%= link_to 'Logout', destroy_user_session_path %>
-</button>
-
-<button>
-  <%= link_to 'Login', new_user_session_path %>
-</button>
-<button>
-  <%= link_to 'Sign Up', new_user_registration_path %>
-</button>
 
 <div id="posts">
   <% @posts.each do |post| %>
