--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,6 +2,21 @@
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
+ 
+ <div class="field">
+    <%= f.label :fname %><br />
+    <%= f.text_field :fname, autofocus: true %>
+  </div>
+
+ <div class="field">
+    <%= f.label :lname %><br />
+    <%= f.text_field :lname, autofocus: true %>
+  </div>
+
+  <div class="field">
+    <%= f.label :image %><br />
+    <%= f.text_field :image, autofocus: true %>
+  </div>
 
   <div class="field">
     <%= f.label :email %><br />
