at timestamp info

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -2,6 +2,8 @@
   <%= post.content %>
   <%= "---" %>
   <%= User.find(post.user_id).fname %>
+  <%= "---" %>
+  <%= time_ago_in_words(post.created_at) %> ago.
   <p>
     <button>
       <%= link_to "Show post", post %>
