--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,18 +1,6 @@
-<%= form_with(model: post) do |form| %>
-  <%= form.text_area :content %>
-  
-  <% if post.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(post.errors.count, "error") %> prohibited this post from being saved:</h2>
-
-      <ul>
-        <% post.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
+<%= form_with(model: @post) do |form| %>
+  <%= render 'posts/errors' %>
+  <%= form.text_area :content, placeholder: 'Compose a new post...' %>
   <div>
     <%= form.submit %>
   </div>
