--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,10 @@
  *= require_self
  */
 
+ body {
+  background-color: aliceblue;
+ }
+
  .post {
   margin-bottom: 8px;
   background-color: beige;
@@ -27,4 +31,12 @@
 
  button {
   text-decoration: none;
+ }
+
+ #logo {
+  text-decoration: none;
+  font-size: 1.7em;
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: white;
  }
