--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,26 +1,6 @@
 <p style="color: green"><%= notice %></p>
 
-<div class='header'>
-  <% if logged_in? %>
-    <%= "Hello #{current_user.fname}" %>
-    <button>
-      <%= link_to 'Profile', static_pages_profile_path %>
-    </button>
-
-    <button>
-      <%= link_to 'Logout', destroy_user_session_path %>
-    </button>
-
-  <% else %>
-    <button>
-      <%= link_to 'Login', new_user_session_path %>
-    </button>
-
-    <button>
-      <%= link_to 'Sign Up', new_user_registration_path %>
-    </button>
-  <% end %>
-</div>
+<%= render 'layouts/header' %>
 
 <%= render 'posts/form' %>
 
