--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,14 +13,23 @@
  *= require_tree .
  *= require_self
  */
+/*
+.theme {
+  color: #9068cf;
+  background-color: #030d36;
+}*/
 
  body {
-  background-color: aliceblue;
+  background-color: #030d36;
+  color: #9068cf;
  }
 
  .post {
   margin-bottom: 8px;
-  background-color: beige;
+  border-color: #9068cf;
+  border-style: double;
+  border-radius: .4rem;
+  padding: 5px;
  }
 
  #posts {
@@ -29,14 +38,25 @@
   width: fit-content;
  }
 
- button {
+ a {
   text-decoration: none;
+  color: #030d36;
+ }
+
+ button {
+  background-color: #9068cf;
+  color: black;
+  border: none;
+  border-radius: .3rem;
  }
 
  #logo {
   text-decoration: none;
   font-size: 1.7em;
   font-weight: bold;
-  margin-bottom: 10px;
-  color: white;
+  color: #9068cf;
+ }
+
+ .accountnav {
+  margin-top: 10px;
  }
