--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -2,6 +2,6 @@
   <%= render 'posts/errors' %>
   <%= form.text_area :content, placeholder: 'Compose a new post...' %>
   <div>
-    <%= form.submit %>
+    <%= form.submit id: 'btn' %>
   </div>
 <% end %>
