--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -10,7 +10,7 @@
       <%= link_to "Show post", post %>
     </button>
     <button>
-      <%= link_to 'Like', '#' %>
+      <%= link_to 'Like', new_like_path %>
     </button>
   </div>
 </div>
