--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -6,7 +6,10 @@
     <%= time_ago_in_words(post.created_at) %> ago.
   </div>
   <div>
-    <%= button_to "Show post", post_path(post), method: :get %>
+    <% unless current_page? post_path(post) %>
+      <%= button_to "Show post", post_path(post), method: :get %>
+    <% end %>
+    
     <%= post.likes.count %> Likes
 
     <% like = current_user.likes.find_by(post: post) %>
