--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,22 +7,15 @@
   <div class='accountnav'>
     <% if logged_in? %>
       <%= "Hello #{current_user.fname}" %>
-      <button>
-        <%= link_to 'Profile', static_pages_profile_path %>
-      </button>
 
-      <button>
-        <%= link_to 'Logout', destroy_user_session_path %>
-      </button>
+      <%= button_to 'Profile', static_pages_profile_path, method: :get %>
+
+      <%= button_to 'Logout', destroy_user_session_path, method: :get %>
 
     <% else %>
-      <button>
-        <%= link_to 'Login', new_user_session_path %>
-      </button>
+      <%= button_to 'Login', new_user_session_path, method: :get %>
 
-      <button>
-        <%= link_to 'Sign Up', new_user_registration_path %>
-      </button>
+      <%= button_to 'Sign Up', new_user_registration_path, method: :get %>
     <% end %>
   </div>
 </header>
