--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,9 @@
     <% if logged_in? %>
       <%= "Hello #{current_user.fname}" %>
 
-      <%= button_to 'Profile', static_pages_profile_path, method: :get %>
+      <% unless current_page? static_pages_profile_path %>
+        <%= button_to 'Profile', static_pages_profile_path, method: :get %>
+      <% end %>
 
       <%= button_to 'Logout', destroy_user_session_path, method: :get %>
 
