--- a/app/views/static_pages/profile.html.erb
+++ b/app/views/static_pages/profile.html.erb
@@ -5,6 +5,8 @@
 <%= render @user %>
 
 <div>
+  <%= link_to 'Edit Profile', edit_user_registration_path %>
+  |
   <%= link_to "Show other users", users_path %>
   |
   <%= link_to "Back to Posts", posts_path %>
