--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -3,7 +3,7 @@
   <%= "Email: #{user.email}" %>
 
   <div>
-    Your Posts:
+    Posts:
     <% user.posts.each do |post| %>
       <%= render post %>
     <% end %>
