--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,8 +4,7 @@
 <%= render @user %>
 
 <div>
-  <%= link_to "Edit this user", edit_user_path(@user) %> |
-  <%= link_to "Back to users", users_path %>
-
-  <%= button_to "Destroy this user", @user, method: :delete %>
+  <%= link_to "Show other users", users_path %>
+  |
+  <%= link_to "Back to Posts", posts_path %>
 </div>
