--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,5 +1,5 @@
-<div id="<%= dom_id post %>" class=post >
-  <%= post.content %>
+<div id="<%= dom_id post %>" class="post" >
+  <p class="content"><%= post.content %></p>
   <div>
     Posted by: <%= User.find(post.user_id).fname %>
     <%= "-" %>
@@ -9,7 +9,7 @@
     <% unless current_page? post_path(post) %>
       <%= button_to "Show post", post_path(post), method: :get %>
     <% end %>
-    
+
     <%= post.likes.count %> Likes
 
     <% like = current_user.likes.find_by(post: post) %>
