--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,7 @@
 <%= render 'layouts/header' %>
 
 <%= render @user %>
+<%= render 'follow_form' if logged_in? %>
 
 <div>
   <%= link_to "Show other users", users_path %>
