--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,6 +1,8 @@
 <div id="<%= dom_id user %>">
   <%= "Name:  #{user.fname} #{user.lname}" %><br>
-  <%= "Email: #{user.email}" %>
+  <%= "Email: #{user.email}" %><br>
+  <%= "Following: #{@user.following.count}"%>
+  <%= "Followers: #{@user.followers.count}"%>
 
   <div>
     Posts:
