--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,7 +14,7 @@ body {
   padding: 5px;
 }
 
-#feed {
+.feed {
   grid-column: 2;
   padding-right: 10%;
 }
@@ -59,3 +59,4 @@ header {
   font-size: 1.1em;
   margin-top: -.1%;
 }
+
