--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,6 +1,11 @@
+:root {
+  --main-color: #6e4a12;
+  --secondary-color: #52e4e0;
+}
+
 body {
-  background-color: #030d36;
-  color: #9068cf;
+  background-color: var(--main-color);
+  color: var(--secondary-color);
   display: grid;
   grid-template-columns: 1fr 3fr;
   /* flex-direction: column; */
@@ -9,7 +14,7 @@ body {
 
 .post {
   margin-bottom: 8px;
-  border: double #9068cf;
+  border: double var(--secondary-color);
   border-radius: 0.4rem;
   padding: 5px;
 }
@@ -21,7 +26,7 @@ body {
 
 a {
   text-decoration: none;
-  color: #9068cf;
+  color: var(--secondary-color);
 }
 
 h1 {
@@ -30,8 +35,8 @@ h1 {
 
 button,
 #btn {
-  background-color: #9068cf;
-  color: black;
+  background-color: var(--secondary-color);
+  color: var(--main-color);
   border: none;
   border-radius: 0.3rem;
 }
@@ -44,7 +49,7 @@ header {
   text-decoration: none;
   font-size: 2em;
   font-weight: bold;
-  color: #9068cf;
+  color: var(--secondary-color);
 }
 
 .accountnav {
