--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,12 +1,8 @@
-<p style="color: lightgreen"><%= notice %></p>
+<p style="color: green"><%= notice %></p>
 <%= render 'layouts/header' %>
 <%= render @post %>
+<%= link_to "Add Comment", new_comment_path(post_id: @post.id) %>
 
-<div class='comments'>
-  <h1>Comments</h1>
-  <%= button_to "Add Comment", new_comment_path, method: :get, params: {post_id: @post.id} %>
-  <br>
-  <% @post.comments.each do |comment| %>
-    <%= render comment %>
-  <% end %>
-</div>
+<% @post.comments.each do |comment| %>
+  <%= comment.content %>
+<% end %>
