--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -4,6 +4,7 @@
   <%= "Following: #{@user.following.count}"%>
   <%= "Followers: #{@user.followers.count}"%><br>
   <%= render 'follow_form' unless current_page? user_path(current_user) %><br>
+  <%= render 'follow_request_form' %>
 
   <div>
     <h1>Posts:</h1>
