--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,7 +19,22 @@ body {
   padding: 5px;
 }
 
-.feed {
+.comments {
+  margin-bottom: 8px;
+  border: double var(--secondary-color);
+  border-radius: 0.4rem;
+  padding: 5px;
+  grid-column: 2;
+}
+
+.comment {
+  margin-bottom: 8px;
+  border: solid var(--secondary-color);
+  border-radius: 0.4rem;
+  padding: 5px;
+}
+
+.feed, #comment_form {
   grid-column: 2;
   padding-right: 10%;
 }
