--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,3 +1,3 @@
-<h1>Comments#new</h1>
+<h1>New Comment</h1>
 
-<%= render 'comments/form' %>
+<div id='comment_form'><%= render 'comments/form' %></div>
