--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -6,11 +6,9 @@
     <%= time_ago_in_words(post.created_at) %> ago.
   </div>
   <div>
-    <% unless current_page? post_path(post) %>
-      <%= button_to "Show post", post_path(post), method: :get %>
-    <% end %>
 
-    <%= post.likes.count %> Likes
+    <%= post.likes.count %> Likes -
+    <%= post.comments.count %> Comments
 
     <% like = current_user.likes.find_by(post: post) %>
     <% if like.nil? %>
@@ -18,11 +16,15 @@
     <% else %>
      <%= button_to "Unlike", like_path(like), method: :delete %>
     <% end %>
+
   </div>
   <% if post.user_id == current_user.id && current_page?(post_path(post)) %>
     <div class='postbtns'><br>
       <%= button_to "Edit this post", edit_post_path(post) %>
       <%= button_to "Destroy this post", post, method: :delete %>
     </div>
+  <% end %>
+  <% unless current_page? post_path(post) %>
+    <%= button_to "Show post", post_path(post), method: :get %>
   <% end %>
 </div>
