--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,6 +1,6 @@
 :root {
-  --main-color: #a426fb;
-  --secondary-color: #f9ff18;
+  --main-color: #F5FBEF;
+  --secondary-color: #124E78;
 }
 
 body {
