--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,6 +36,7 @@ body {
 
 .feed, #comment_form {
   grid-column: 2;
+  grid-row: 2;
   padding-right: 10%;
 }
 
@@ -58,11 +59,12 @@ button,
 
 header {
   grid-column: 1;
+  padding: .5rem;
 }
 
 #logo {
   text-decoration: none;
-  font-size: 2em;
+  font-size: 2rem;
   font-weight: bold;
   color: var(--secondary-color);
 }
@@ -76,8 +78,18 @@ header {
 }
 
 .content {
-  font-size: 1.1em;
+  font-size: 1.1rem;
   margin-top: -.1%;
+}
+
+.meta {
+  font-size: .9rem;
+  opacity: .75;
+}
+
+.counts {
+  font-size: .95rem;
+  opacity: .85;
 }
 
 .user_info {
@@ -86,4 +98,5 @@ header {
 
 #profile_image {
   border-radius: .5rem;
+  margin-bottom: .5rem;
 }
