add image, rename

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header>
 
 <div>
-  <%= link_to 'SimpleBook', root_path, id: 'logo' %>
+  <%= link_to 'Socialize', root_path, id: 'logo' %>
 </div>
 
   <div class='accountnav'>
@@ -18,7 +18,7 @@
       <%= button_to 'Logout', destroy_user_session_path, method: :get %>
 
     <% else %>
-      Welcome to SimpleBook! <br>
+      Welcome to Socialize! <br>
       Log in or Sign up to continue.
 
 
