--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,6 +1,6 @@
 :root {
-  --main-color: #fbfbef;
-  --secondary-color: #124E78;
+  --main-color: #E9F1F7;
+  --secondary-color: #623CEA;
 }
 
 body {
@@ -39,12 +39,19 @@ h1 {
 }
 
 button,
-#btn, .btn {
+#btn {
   background-color: var(--secondary-color);
   color: var(--main-color);
   border: none;
   border-radius: 0.3rem;
   padding: .25rem;
+}
+
+button:hover, #btn:hover {
+  /* color: var(--secondary-color); */
+  /* opacity: .5; */
+  /* color: black; */
+  background-color: rgba(50, 7, 239, 0.649);
 }
 
 .button_to {
@@ -64,6 +71,7 @@ textarea {
   border-radius: 0.4rem;
   padding: 0.5rem;
   margin-bottom: 0.5rem;
+  font-family: "ubuntu sans", sans-serif;
 }
 
 #logo {
